--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h1>Odin Recipes</h1>
 
     <ul>
-        <a href="./recipes/pasta.html">Chicken and Mushroom Pasta</a>
+        <li><a href="./recipes/pasta.html">Chicken and Mushroom Pasta</a></li>
+        <li><a href="./recipes/cheesecake.html">Strawberry Cheescake</a></li>
     </ul>
 </body>
 </html>
