--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Chicken and Mushroom Pasta</h1>
-    <img src="../img/pasta.jpg.jpg" alt="Chicken and Mushroom Pasta">
+    <img src="../img/pasta.jpg" alt="Chicken and Mushroom Pasta">
     <h4>The best pasta dish you will ever taste</h4>
     <p>Use your stovetop to prepare this quick and tasty meal with chicken, spinach, mushrooms, and pasta for a weeknight, or for guests! Use one pot for the pasta and one pot for the chicken, veggies and sauce, then combine in a pretty pasta bowl or on a platter.</p>
     <h3>Ingredients</h3>
