--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ul>
         <li><a href="./recipes/pasta.html">Chicken and Mushroom Pasta</a></li>
         <li><a href="./recipes/cheesecake.html">Strawberry Cheescake</a></li>
+        <li><a href="./recipes/pancakes.html">Pancakes</a></li>
     </ul>
 </body>
 </html>
