Add styles.css to project

--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -5,17 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strawberry Cheescake</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-  <h1>Strawberry Cheescake</h1>  
+  <h1 class="heading">Strawberry Cheescake</h1>  
   <img src="../img/cheesecake.jpg" alt="Strawberry Cheescake">
-  <h4>A unique but flavourful desert that you have to try</h4>
-  <p>This recipe will give you a smooth and creamy cheesecake with strawberry sauce swirls in graham crust.</p>
-  <p>Creamy strawberry cheesecake is perfect for any special occasion! You have to bake the cake and let it cool for an hour, then chill it in the refrigerator for at least 4 hours before serving.</p>
-  <h3>Ingredients</h3>
+  <div class="desc">
+    <h4>A unique but flavourful desert that you have to try</h4>
+    <p>This recipe will give you a smooth and creamy cheesecake with strawberry sauce swirls in graham crust.</p>
+    <p>Creamy strawberry cheesecake is perfect for any special occasion! You have to bake the cake and let it cool for an hour, then chill it in the refrigerator for at least 4 hours before serving.</p>
+  </div>
+  <h3 class="subheading">Ingredients</h3>
   <h4>Crust</h4>
  
-  <ul>
+  <ul class="desc">
     <li>1 ¼ cups graham cracker crumbs</li>
     <li>⅓ cup butter, melted</li>
     <li>¼ cup white sugar</li>
@@ -23,7 +26,7 @@
   </ul>
 
   <h4>Filling</h4>
-  <ul>
+  <ul class="desc">
     <li>2 (10 ounce) packages frozen sweetened sliced strawberries, thawed and drained</li>
     <li>1 tablespoon cornstarch</li>
     <li>3 (8 ounce) packages cream cheese, softened</li>
@@ -34,8 +37,8 @@
     <li>1 tablespoon water (Optional)</li>
   </ul>
 
-  <h3>Steps</h3>
-  <ol>
+  <h3 class="subheading">Steps</h3>
+  <ol class="desc">
     <li>Make crust: Combine graham cracker crumbs, butter, sugar, and cinnamon in a bowl; mix well. Press onto the bottom of an ungreased 9-inch springform pan. Place in the refrigerator to chill for 30 minutes.</li>
     <li>Preheat the oven to 300 degrees F (150 degrees C).</li>
     <li>Make filling: Place strawberries and cornstarch into a blender. Cover and puree until smooth.</li>
