--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -5,15 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pancakes</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-   <h1>Pancakes</h1> 
+   <h1 class="heading">Pancakes</h1> 
    <img src="../img/pancakes.jpg" alt="Pancakes">
-   <h4>Fluffy pancakes - quick and easy</h4>
-   <p>Tall and fluffy. These pancakes are just right. Topped with strawberries and whipped cream, they are impossible to resist.</p>
+    <div class="desc"> 
+      <h4>Fluffy pancakes - quick and easy</h4>
+      <p>Tall and fluffy. These pancakes are just right. Topped with strawberries and whipped cream, they are impossible to resist.</p>
+    </div>
 
-   <h3>Ingredients</h3>
-   <ul>
+   <h3 class="subheading">Ingredients</h3>
+   <ul class="desc">
     <li>¾ cup milk</li>
     <li>2 tablespoons white vinegar</li>
     <li>1 cup all-purpose flour</li>
@@ -26,8 +29,8 @@
     <li>Cooking spray</li>
    </ul>
 
-   <h3>Steps</h3>
-   <ol>
+   <h3 class="subheading">Steps</h3>
+   <ol class="desc">
     <li>Combine milk with vinegar in a medium bowl and set aside for 5 minutes to "sour".</li>
     <li>Combine flour, sugar, baking powder, baking soda, and salt in a large mixing bowl. Whisk egg and butter into "soured" milk. Pour the flour mixture into the wet ingredients and whisk until lumps are gone.</li>
     <li>Heat a large skillet over medium heat, and coat with cooking spray. Pour 1/4 cupfuls of batter onto the skillet, and cook until bubbles appear on the surface. Flip with a spatula, and cook until browned on the other side.</li>
